--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,10 @@ header{
     font-family: Arial, Helvetica, sans-serif;
     font-style: italic;
     color: white;
-    margin: -11px;
     text-align: center;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
 }
 .fondobarra{
     background-image: url(../images/barbaenredada.jpg); /*Insertar imágen*/
